--- a/views/date.erb
+++ b/views/date.erb
@@ -1,5 +1,1 @@
-<%= require 'date' %>
-
-
-<h1>"Today"</h1>
-<p1>"The date is </p1>
+<p> The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
